--- a/themes/greatermedia/assets/css/sass/components/_gallery.scss
+++ b/themes/greatermedia/assets/css/sass/components/_gallery.scss
@@ -875,6 +875,10 @@ category: Components - Gallery Archive
 	}
 }
 
+.gallery__featured--thumbnail {
+	position: relative;
+}
+
 .gallery__feature {
 	margin-bottom: 5.6%;
 	
@@ -1040,6 +1044,7 @@ category: Components - Gallery Archive
 	@extend %gmr-icons;
 	font-size: ms(10);
 	color: $color-text-white;
+	z-index: 1;
 }
 
 .gallery__grid--album:before {
